# cozenage

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.no_cmake  Makefile.tests  README.md  README.status.md  cozenage.supp
.github/workflows/: pages.yml
docs/: cozenage.1  requirements.txt
docs/source/: conf.py  index.rst
docs/source/howto/: index.rst  installation.rst  running.rst
docs/source/reference/: index.rst  the_cozenage_reference.rst
docs/source/reference/documentation_notation/: index.rst
docs/source/reference/errors_and_exceptions/: index.rst
docs/source/reference/extended_datatypes/: index.rst
docs/source/reference/native_datatypes/: booleans.rst  characters.rst  pairs_and_lists.rst  strings.rst
docs/source/reference/primitive_datatypes/: booleans.rst  bytevectors.rst  characters.rst  hashes.rst  index.rst  maps.rst  numerics.rst  pairs_and_lists.rst  ports.rst  procedures.rst  sets.rst  strings.rst  symbols.rst  vectors.rst
docs/source/reference/syntax_and_special_forms/: index.rst  sf.rst
docs/source/reference/universal_procedures/: comparisons.rst  control_features.rst  index.rst  predicates.rst
docs/source/tutorial/: get_started_with_scheme.rst  index.rst
scheme/: gc_stress_test.scm  hello_world.scm  little_schemer.scm  streams.scm  test.scm  test_0.scm  test_1.scm  test_2.scm  test_3.scm
src/: bignum.c  bignum.h  bools.c  bools.h  buffer.c  buffer.h  bytevectors.c  bytevectors.h  cell.c  cell.h  char_lib.c  char_lib.h  chars.c  chars.h  cmake_detect.c  comparators.c  comparators.h  compat_readline.c  compat_readline.h  complex_lib.c  complex_lib.h  config.c  config.h  control_features.c  control_features.h  coz_bits_lib.c  coz_bits_lib.h  coz_ext_lib.c  coz_ext_lib.h  cxr_lib.c  cxr_lib.h  environment.c  environment.h  errors.c  errors.h  eval.c  eval.h  eval_lib.c  eval_lib.h  file_lib.c  (+61 more)
src/base-lib/: bits_lib.c  bits_lib.h  cxr_lib.c  cxr_lib.h  file_lib.c  file_lib.h  lazy.c  math_lib.c  math_lib.h  proc_env_lib.c  proc_env_lib.h  random_lib.c  system_lib.c  time_lib.c
src/cozenage-lib/: coz_bits_lib.h  coz_ext_lib.c
src/scheme-lib/: char_lib.c  char_lib.h  complex_lib.c  complex_lib.h  eval_lib.c  file_lib.c  file_lib.h  inexact_lib.c  io_lib.c  load_lib.c  load_lib.h  process_context_lib.c  time_lib.c  time_lib.h
tests/: test_chars.c  test_equivalence.c  test_lists.c  test_math_lib.c  test_meta.c  test_meta.h  test_numeric_predicates.c  test_numerics.c  test_special_forms.c  test_strings.c  test_symbols.c  test_type_predicates.c  test_vectors.c
utilities/: builtin_markdown.py
